# HaikuUtils

./: .gitignore  LICENSE  README.md
DirectWindowTest/: README.md  Test.cpp  Test.h  Test.rdef  TestWindow.cpp  TestWindow.h  makefile
DragDrop/: DragDrop.cpp  Makefile  README.md
EGLTest/: EGLTest.c  README.md  Window.cpp  makefile
EGLTest2/: BitmapHook.h  BitmapHookView.cpp  BitmapHookView.h  GlApp.cpp  GlApp.h  MinApp.cpp  MinApp.h  meson.build
Editor/: Makefile  MinApp.cpp  README.md
FreeTypeHarfBuzzDemo/: Main.cpp  README.md  meson.build
Handles/: Handles.cpp  Makefile  README.md
I2cTabletDevice/: README.md  TabletDevice.cpp  TabletDevice.h  makefile
MenuDynItems/: Makefile  MenuDynItems.cpp
MinApp/: Makefile  MinApp.cpp  README.md  meson.build
MsgDump/: Fields  MsgDump.cpp  MsgDump.h  MsgDump.rdef  README.md  makefile
OSMesaDriver/: README.md  SoftwareRenderer.cpp  SoftwareRenderer.h  makefile  opengl
OpenGLTest/: README.md  SampleGLApp.cpp  SampleGLApp.h  SampleGLView.cpp  SampleGLView.h  SampleGLWindow.cpp  SampleGLWindow.h  makefile
OpenGLTest2/: OpenGLTest.rdef  README.md  SampleGLApp.cpp  SampleGLView.cpp  SampleGLView.h  SampleGLWindow.cpp  SampleGLWindow.h
PictureDump/: Makefile  PictureDump.cpp  README.md
PictureDumpJson/: PictureDump.cpp  meson.build
PictureDumpJson2/: NestedPictures.yaml  PictureBinary.cpp  PictureBinary.h  PictureCompile.cpp  PictureCompileView.cpp  PictureDump.cpp  PictureDumpPlay.cpp  PictureJson.cpp  PictureJson.h  PictureJsonIdentity.cpp  PictureOpcodes.h  PictureReaderBinary.cpp  PictureReaderBinary.h  PictureReaderJson.cpp  PictureReaderJson.h  PictureReaderPlay.cpp  PictureReaderPlay.h  PictureVisitor.h  PictureVisitorBinary.cpp  PictureVisitorBinary.h  PictureVisitorJson.cpp  PictureVisitorJson.h  PictureWriterBinary.cpp  PictureWriterBinary.h  PictureWriterJson.cpp  PictureWriterJson.h  PictureWriterView.cpp  PictureWriterView.h  PictureWriterYaml.cpp  PictureWriterYaml.h  README.md  meson.build
PictureView/: Makefile  PictureView.cpp  PictureView.rdef  Placeholder  README.md
Promises/: CredentialsApp.cpp  CredentialsWindow.cpp  CredentialsWindow.h  Promises.cpp  Promises.h  README.md  Tests.cpp  meson.build
ScreenKeyboard/: KeyboardDevice.cpp  KeyboardDevice.h  KeyboardHandler.cpp  KeyboardHandler.h  KeyboardWindow.cpp  KeyboardWindow.h  README.md  ToggleKeyboard  Translation.cpp  _APP_  devices  makefile
Services/: Makefile  README.md  Resources.h  Services.cpp  Services.rdef
Services/Icons/: Delete  Pause  Restart  Start  Stop
StackTrace/: Makefile  README.md  StackTrace.cpp
SystemManager/: Docu  Errors.cpp  Errors.h  Makefile  Old.cpp  README.md  StackWindow.cpp  StackWindow.h  SystemManager.cpp  SystemManager.rdef  TeamWindow.cpp  TeamWindow.h  UIUtils.cpp  UIUtils.h  Utils.cpp  Utils.h
TabbedWindows/: Makefile  MinApp.cpp  README.md
TraverseApps/: README.md  TraverseApps.cpp  makefile
TraverseApps2/: HighlightRect.cpp  HighlightRect.h  Makefile  Misc_Deskbar_Group.rdef  README.md  Resources.h  ScriptingUtils.cpp  ScriptingUtils.h  SuiteEditor.cpp  SuiteEditor.h  TraverseApps.cpp  TraverseApps.rdef
TraverseApps2/Icons/: Highlight  Highlight.rdef  Target
Users/: GroupForm.cpp  GroupForm.h  Makefile  PasswordForm.cpp  PasswordForm.h  README.md  Resources.h  UIUtils.cpp  UIUtils.h  UserDB.cpp  UserDB.h  UserForm.cpp  UserForm.h  Users.cpp  Users.rdef
Users/Icons/: Add.hvif  Edit.hvif  Remove.hvif  Settings.hvif
VideoEncoder/: Makefile  README.md  VideoEncoder.cpp
libGL/: GLRenderer.cpp  GLRenderer.h  GLRendererRoster.cpp  GLRendererRoster.h  GLView.cpp  Makefile
libGL2/: GLView.cpp  Makefile  README.md
